# fpytloun-mnemory

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml
.github/workflows/: npm-publish.yml  python-publish.yml
benchmarks/: README.md  __init__.py
benchmarks/locomo/: __init__.py  __main__.py  answer.py  config.py  dataset.py  evaluate.py  ingest.py  report.py  runner.py  search.py
docs/: README.md  architecture.md  configuration.md  deployment.md  development.md  management-ui.md  mcp-tools.md  memory-model.md  monitoring.md  quickstart.md  rest-api.md
docs/clients/: chatgpt.md  claude-code.md  claude-desktop.md  cline.md  codex.md  continue.md  cursor.md  hermes.md  open-webui.md  openclaw.md  opencode.md  windsurf.md
docs/system-prompts/: claude-code.md  openwebui-basic.md
examples/grafana/: dashboard.json
examples/opencode/: README.md  memory.md  mnemory.ts  opencode.json
examples/openwebui/: README.md  mnemory_filter.py
examples/system-prompts/: claude-code.md  openwebui-basic.md  openwebui-personality.md  quickstart.md
integrations/claude-code/: README.md  hooks.json
integrations/claude-code/scripts/: recall.sh  remember.sh
integrations/grafana/: README.md  dashboard.json
integrations/hermes/: README.md  __init__.py  client.py  config.py  helpers.py  hooks.py  plugin.yaml  pyproject.toml  tools.py
integrations/hermes/tests/: test_config.py  test_helpers.py
integrations/openclaw/: README.md  client.ts  config.ts  index.test.ts  index.ts  openclaw.plugin.json  package.json
integrations/opencode/: README.md  client.ts  helpers.test.ts  helpers.ts  hooks.ts  index.ts  mnemory.ts  opencode.json  package.json  tools.ts
integrations/openwebui/: README.md  mnemory_filter.py
mnemory/: __init__.py  auth.py  cache.py  categories.py  classify.py  config.py  consolidation.py  embeddings.py  fsck.py  instructions.py  llm.py  maintenance.py  memory.py  metrics.py  migration.py  prompts.py  sanitize.py  server.py  session.py  sparse.py  tokens.py  ttl.py
mnemory/api/: __init__.py  auth.py  deps.py  fsck.py  memories.py  recall.py  remember.py  schemas.py  sessions.py  ui.py
mnemory/storage/: artifact.py  session.py  vector.py
mnemory/ui/: __init__.py  tailwind.config.js
mnemory/ui/src/: input.css
mnemory/ui/static/: index.html
mnemory/ui/static/css/: app.css
mnemory/ui/static/js/: api.js  app.js  fsck.js  graph.js  memories.js  metrics.js  search.js  sessions.js  user.js
tests/: conftest.py  test_agent_scoping.py  test_api.py  test_artifact.py  test_cache.py  test_categories.py  test_classify.py  test_config.py  test_consolidation.py  test_e2e.py  test_fsck.py  test_jwt_auth.py  test_labels.py  test_llm.py  test_maintenance.py  test_memory.py  test_migration.py  test_prompts.py  test_sanitize.py  test_session.py  test_sessions_api.py  test_sparse.py  test_tokens.py  test_ttl.py
