[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemory"
version = "1.9.0"
description = "A self-hosted, two-tier memory system for AI agents and assistants"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Filip Pytloun" },
]
keywords = ["mcp", "memory", "ai", "llm", "qdrant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.6.0",
    "openai>=1.0.0",
    "qdrant-client>=1.14.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "fastapi>=0.100.0",
    "prometheus_client>=0.20.0,<1.0.0",
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.34.0",
]
redis = [
    "redis>=5.0.0",
]
all = [
    "mnemory[s3]",
    "mnemory[redis]",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.5.0",
]

[project.scripts]
mnemory = "mnemory.server:main"

[project.urls]
Homepage = "https://github.com/fpytloun/mnemory"
Repository = "https://github.com/fpytloun/mnemory"
Issues = "https://github.com/fpytloun/mnemory/issues"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring LLM API key and real backends (deselected by default)",
]
addopts = "-m 'not e2e'"

[tool.hatch.build.targets.wheel]
packages = ["mnemory"]
